<resources>
    <string name="app_name">Protectron</string>
    <string name="action_new_arrest">New Arrest</string>
    <string name="arrest_name_hint">Enter the name or alias...</string>
    <string name="arrest_date_hint">Enter the date...</string>
    <string name="arrest_time_hint">Enter the time...</string>
    <string name="arrest_desc_hint">Enter what happend...</string>
    <string name="btn_submit_arrest_text">Submit Arrest</string>
    <string name="btn_my_arrests_text">My Arrests</string>
    <string name="btn_edit_text">Edit</string>
    <string name="btn_delete_text">Delete</string>
    <string name="btn_resubmit_text">Resubmit</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="text_login">Login</string>
    <string name="text_not_member">Not a member yet? Sign up</string>

    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Protectron Users</string>
    <string name="new_arrest">New Arrest</string>
    <string name="search_arrests">Search Arrests</string>
    <string name="missing_name">Please Enter a Name</string>
    <string name="missing_city">Please Enter a City</string>
    <string name="missing_address">Please Enter an Address</string>
    <string name="location_name_hint">Enter the Location Name...</string>
    <string name="location_city_hint">Enter the City...</string>
    <string name="location_address_hint">Enter the Address...</string>
    <string name="add_location">Add Location</string>
    <string name="new_location">New Location</string>
    <string name="add_shift_button">Add Shift</string>
    <string name="select_time">Select the Time...</string>
    <string name="missing_date">Missing a date</string>
    <string name="missing_time">Missing a time</string>
    <string name="shift_date">Select a date...</string>
    <string name="shift_time">Select a start time...</string>
    <string name="shift_end_time">Select an end time...</string>
    <string name="add_shift">Add Shift</string>
    <string name="my_locations_button">My Locations</string>
    <string name="my_shifts_button">My Shifts</string>
    <string name="start_shift_button">Begin This Shift</string>
    <string name="apply_for_shift_button">Apply For a Shift</string>
    <string name="search_alias">Search By An Alias</string>
    <string name="check_activity_button">Check Activity</string>
    <string name="submit_arrest_button">Submit Arrest</string>
    <string name="choose_hair_color_hint">Choose Hair Color...</string>
    <string name="user_list">User List</string>
    <string name="location_list">List Locations</string>
    <string name="finish_shift_button">Finish Shift</string>
    <string name="shift_end_time_head">Your Shift Ends At:</string>
    <string name="emergency">Report Emergency</string>
    <string name="title_activity_map">Map</string>
    <string name="view_location_button">View Location</string>
</resources>
