<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tech.secure.protectron.basic_user.NewLocationActivity">

    <EditText
        android:id="@+id/inputLocationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:hint="@string/location_name_hint"/>

    <EditText
        android:id="@+id/inputLocationCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/location_city_hint"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@android:color/white"/>

    <EditText
        android:id="@+id/inputLocationAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/location_address_hint"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/addLocationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/add_location"
        android:layout_gravity="center"/>

</LinearLayout>
