<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context="tech.secure.protectron.basic_user.NewShiftActivity">


    <EditText
        android:id="@+id/shift_date_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/shift_date"
        android:inputType="date"
        android:clickable="true"
        android:focusable="false"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:gravity="center"/>

    <EditText
        android:inputType="time"
        android:id="@+id/shift_time_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="false"
        android:textColor="@android:color/white"
        android:hint="@string/shift_time"
        android:layout_gravity="center"
        android:gravity="center"/>

    <EditText
        android:inputType="time"
        android:id="@+id/shift_end_time_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="false"
        android:textColor="@android:color/white"
        android:hint="@string/shift_time"
        android:layout_gravity="center"
        android:gravity="center"/>

    <Button
        android:id="@+id/add_shift_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/add_shift"
        android:layout_gravity="center"/>

</LinearLayout>
